忽略不需要文件

--- a/log4j-parent/pom.xml
+++ b/log4j-parent/pom.xml
@@ -1,12 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>cn.feng.log4j</groupId>
   <artifactId>log4j-parent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
+
   <modules>
-  	<module>log4j-java</module>
-  	<module>log4j2-java</module>
-  	<module>logback-java</module>
+    <module>log4j-java</module>
+    <module>log4j2-java</module>
+    <module>logback-java</module>
   </modules>
+
 </project>
